fix: fix nav menu onscroll updating bug + open nav menu blocking user interaction bug
Additionally, fix text selection styling bugs + overlapping UI elements on squished mobile screens. Also re-adds mobile navbar border styling.

--- a/app/_components/nav/mobile-nav.module.css
+++ b/app/_components/nav/mobile-nav.module.css
@@ -139,4 +139,11 @@
   transition-duration: 150ms;
 }
 
+/* At squished/short screens, hide bottom components to prevent overlap */
+@media (max-height: 440px) {
+  .hideSquished {
+    display: none;
+  }
+}
+
 /* END - Mobile nav menu styles */
